test_suite/alan-2022-examples/failing/008370_mutation.alan
source H function p() to = boolean begin relax end begin relax end
